tests/negative/gold/interface-cycle-test.gold
tests/negative/interface-cycle-test.toit:5:11: error: Cycle in interface chain
interface A B:
          ^
tests/negative/interface-cycle-test.toit:5:13: error: This clause contributes to the cycle
interface A B:
            ^
tests/negative/interface-cycle-test.toit:7:13: error: This clause contributes to the cycle
interface B A:
            ^
Compilation failed
